test/tests/compiler/17_supporting_dynamic_memory_allocation/valid/plx1_kw1_in_name.plx
pub fn main(none) i32 {
    sizeof1: i32 = true
    
    return not sizeof1
}
